[gd_scene load_steps=5 format=3 uid="uid://d1kjgis1vly4l"]

[ext_resource type="Material" uid="uid://rtn2ess0qjq5" path="res://scenes/ui/OnHoverMat.tres" id="1_dipo5"]
[ext_resource type="Script" uid="uid://dy0qvmubyom1k" path="res://scenes/world/Buildings/DroneShop/DroneShop.gd" id="2_j1j7t"]
[ext_resource type="Texture2D" uid="uid://40j80b16cm6m" path="res://scenes/world/Buildings/DroneShop/DroneShop.png" id="3_50uhj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wwj4m"]
size = Vector2(223, 207)

[node name="DroneShop" type="Area2D"]
y_sort_enabled = true
script = ExtResource("2_j1j7t")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("1_dipo5")
texture = ExtResource("3_50uhj")
offset = Vector2(0, -64)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-0.5, -72.5)
shape = SubResource("RectangleShape2D_wwj4m")

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
